<resources>
    <string name="app_name">tp7</string>
    <string name="open_drawer">open_drawer String</string>
    <string name="close_drawer">close_drawer String</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liste_enseignants">liste_enseignants</string>
        <string name="course_label">Nom du cours</string>
        <string name="hours_label">Nombre d\'heures</string>
        <string name="add_course_button">Ajouter un cours</string>
        <string name="list_courses_button">Lister les cours</string>
        <string name="type_course">Cours</string>
        <string name="type_workshop">Atelier</string>
</resources>