<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <EditText
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:autofillHints="text"
        android:hint="@string/course_label"
        android:inputType="text"
        android:textColor="#000000"
        android:backgroundTint="#F5F5F5"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/course_hours"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:autofillHints="number"
        android:hint="@string/hours_label"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:backgroundTint="#F5F5F5"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/course_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <RadioGroup
        android:id="@+id/course_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/course_hours"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/course_type_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_course" />

        <RadioButton
            android:id="@+id/course_type_workshop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_workshop" />
    </RadioGroup>


    <Spinner
        android:id="@+id/teacher_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/course_type_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/add_course_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/add_course_button"
        app:layout_constraintTop_toBottomOf="@id/teacher_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/list_courses_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/list_courses_button"
        app:layout_constraintTop_toBottomOf="@id/add_course_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
